# jbig2enc-rust

./: Cargo.toml  ITU-T_T_88__08_2018.txt  README.md  build.rs  jbig2.rs  jbig2arith.rs  jbig2enc.rs  jbig2pdf.rs  jbig2sym.rs  licence  output.jb2
jbig2-decoder/support/: image_write.cpp
jbigH2test/: Cargo.toml
jbigH2test/src/: jbig2arith.rs  jbig2shared.rs  jbig2sym.rs  main.rs
src/: jbig2.rs  jbig2arith.rs  jbig2comparator.rs  jbig2enc.rs  jbig2halftone.rs  jbig2lutz.rs  jbig2pdf.rs  jbig2shared.rs  jbig2structs.rs  jbig2sym.rs  lib.rs
tests/: comparator.rs  encoder.rs  encoder_pbm.rs
tests/common/: mod.rs
tests/fixtures/: test_image.pbm  test_image1.pbm
