[package]
name = "jbig2"
version = "0.2.0"
edition = "2021"

[lib]
name = "jbig2"
path = "src/jbig2.rs"

[dependencies]
tracing = { version = "0.1", features = ["std"], optional = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "registry", "std"], optional = true }
clap = { version = "4.5.40", features = ["derive"] }
ndarray = "0.16.1"
bytemuck = { version = "1.0", features = ["derive"] }
anyhow = "1.0.57"
log = "0.4"
env_logger = "0.10"
aksr = "0.0.3"
byteorder = "1.4"
lopdf = "0.36"
serde_json = "1.0"
glob = "0.3"
bitvec = "1.0"
lutz = "1.4.1"
xxhash-rust = { version = "0.8.10", features = ["xxh3"] }

serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
chrono = "0.4"
fnv = "1.0"
derive_builder = "0.20.2"
lazy_static = "1.4.0"
once_cell = "1.19"

[build-dependencies]
vergen = { version = "9.0.0", default-features = false, features = ["build"] }

[[bin]]
name = "jbig2-tester"
path = "bin/tester.rs"

[features]
default = []
trace_arith = ["dep:tracing", "dep:tracing-subscriber"]
trace_encoder = ["dep:tracing", "dep:tracing-subscriber"]

[dev-dependencies]
tracing = { version = "0.1", features = ["std"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "registry", "std"] }

[profile.test]
# Profile-specific settings go here
